--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,55 @@
+<mat-drawer-container class="example-container" autosize>
+  <mat-drawer #drawer class="example-sidenav" mode="push">
+    <mat-list>
+      <mat-list-item>
+        <button mat-raised-button>
+          User List
+        </button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-raised-button>
+          Add User
+        </button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-raised-button>
+          Remove User
+        </button>
+      </mat-list-item>
+    </mat-list>
+
+    <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
+    <button (click)="showFiller = !showFiller" mat-raised-button>
+      Toggle extra text
+    </button>
+  </mat-drawer>
+
+
 <div class="contents">
+<p>
+  <mat-toolbar color="primary">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <mat-icon>build_circle</mat-icon>
+    <span>CRUD App</span>
+  </mat-toolbar>
+</p>
 
-  <app-user-list></app-user-list>
 
-  <mat-grid-list class="forms" cols="2" rowHeight="fit" style="height: 300px;">
 
-    <mat-grid-tile>
-      <app-registration></app-registration>
-    </mat-grid-tile>
+    <app-user-list></app-user-list>
 
-    <mat-grid-tile>
-      <app-user-removing></app-user-removing>
-    </mat-grid-tile>
+    <mat-grid-list class="forms" cols="2" rowHeight="fit" style="height: 300px;">
 
-  </mat-grid-list>
+      <mat-grid-tile>
+        <app-registration></app-registration>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <app-user-removing></app-user-removing>
+      </mat-grid-tile>
+
+    </mat-grid-list>
 </div>
+</mat-drawer-container>
