--- a/src/app/user-removing/user-removing.component.css
+++ b/src/app/user-removing/user-removing.component.css
@@ -1,8 +1,12 @@
-.forms-card {
-  max-width: 100%;
-  min-width: 200px;
-  height: 100%;
-    }
+.content {
+  width: 100%;
+}
+
+.mat-list {
+  display: block;
+  width: 230px;
+  margin: 100px auto 0 auto;
+}
 
 p {
       text-align: center;
