--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,4 @@
-.contents {
-  /*opacity: 0.8;*/
+.content {
   background-image: url(../assets/bg.jpg);
   background-position: center;
   height: 100%;
