--- a/src/app/registration/registration.component.css
+++ b/src/app/registration/registration.component.css
@@ -1,15 +1,12 @@
+.content {
+  width: 100%;
+}
 
-  /* .example-full-width {
-    width: 51%;
-  } */
-
-  /* .register-form {
-    min-width: 150px;
-    max-width: 300px;
-    width: 100%;
-    margin: 0 auto;
-  } */
-
+.mat-list {
+  display: block;
+  width: 230px;
+  margin: 100px auto 0 auto;
+}
   p {
     text-align: center;
   }
@@ -17,11 +14,11 @@
   .text-center {
     text-align: center;
   }
-  
+
   .text-right {
     text-align: right;
   }
-  
+
   .text-left {
     text-align: left;
   }
