--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,57 @@
 <mat-drawer-container class="example-container" autosize>
+
   <mat-drawer #drawer class="example-sidenav" mode="side">
     <mat-list>
+
       <mat-list-item>
         <mat-icon>list</mat-icon>
         <button mat-button [routerLink]="'/userList'">
           User List
         </button>
       </mat-list-item>
+
       <mat-list-item>
         <mat-icon>person_add_alt_1</mat-icon>
         <button mat-button [routerLink]="'/addUser'">
           Add User
         </button>
       </mat-list-item>
+
       <mat-list-item>
         <mat-icon>person_remove</mat-icon>
         <button mat-button [routerLink]="'/removeUser'">
           Remove User
         </button>
       </mat-list-item>
+
+      <mat-list-item>
+        <mat-icon>person_remove</mat-icon>
+        <button mat-button [matMenuTriggerFor]="updateFields">
+          Update User
+        </button>
+        <mat-menu #updateFields="matMenu">
+          <button mat-menu-item (click)="print('email')">Email</button>
+          <button mat-menu-item (click)="print('password')">Password</button>
+        </mat-menu>
+      </mat-list-item>
+
     </mat-list>
   </mat-drawer>
 
 
-<div class="content">
-  <p>
-    <mat-toolbar color="primary">
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <mat-icon>build_circle</mat-icon>
-      <span>CRUD App</span>
-    </mat-toolbar>
-  </p>
+  <div class="main">
 
-  <router-outlet></router-outlet>
+    <p>
+      <mat-toolbar color="primary">
+        <button mat-icon-button class="example-icon" (click)="drawer.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <mat-icon>build_circle</mat-icon>
+        <span>CRUD App</span>
+      </mat-toolbar>
+    </p>
 
-</div>
+    <router-outlet></router-outlet>
+
+  </div>
 </mat-drawer-container>
