--- a/src/app/user-update/user-update.component.html
+++ b/src/app/user-update/user-update.component.html
@@ -8,7 +8,7 @@
       </mat-form-field>
     </mat-list-item>
 
-    <mat-list-item>
+    <mat-list-item *ngIf="updatingField == 1">
       <mat-icon matListIcon>email</mat-icon>
       <mat-form-field>
         <mat-label>E-mail</mat-label>
@@ -16,10 +16,10 @@
       </mat-form-field>
     </mat-list-item>
 
-    <mat-list-item>
+    <mat-list-item *ngIf="updatingField == 2">
       <mat-icon matListIcon>lock</mat-icon>
       <mat-form-field>
-        <mat-label>Password</mat-label>
+        <mat-label>New Password</mat-label>
         <input matInput placeholder="Password" type="text" [(ngModel)]="user.password" (keydown.enter)="update()">
       </mat-form-field>
     </mat-list-item>
